--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
 </body>
 </html>
 <!-- 
-  git add . && git commit -m "fix users" && git push origin master
+  git add . && git commit -m "fix 40 40/60 => 40" && git push origin master
  -->
